# ManaGunZ

./: .gitignore  Changelog.txt  Makefile  sfo.xml
.github/scripts/: env.sh  name.sh  rename.sh  req.sh
.github/workflows/: build.yml
MGZ/: Makefile
MGZ/lib/: configure_ImageMagick  configure_OpenSSL  configure_libiconv  configure_libtga  configure_libwebp
MGZ/lib/libtga/: AUTHORS  ChangeLog  KNOWN_BUGS  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.status  configure  configure.in  help.txt  libtool  mkinstalldirs
MGZ/lib/libtga/doc/: Makefile  Makefile.am  Makefile.in  README  api.sgml
MGZ/lib/libtga/examples/: COPYING  Makefile  Makefile.am  Makefile.in  decode  decode.c  encode  encode.c  tgadump  tgadump.c
MGZ/lib/libtga/examples/.deps/: decode.Po  encode.Po  tgadump.Po
MGZ/lib/libtga/src/: Makefile  Makefile.am  Makefile.in  libtga.la  stamp-h1  tga.h  tgaconfig.h  tgaconfig.h.in
MGZ/lib/libtga/src/.deps/: tga.Plo  tgaread.Plo  tgawrite.Plo
MGZ/lib/libtga/src/.libs/: libtga.lai
MGZ/source/: aes_omac.c  aes_omac.h  bn.c  bn.h  build_ird.c  build_ird.h  ciso.c  ciso.h  cobra.h  common.h  cxml.cpp  cxml.h  data.h  dds_reader.c  dds_reader.h  dynarec.c  dynarec.h  ec.c  ec.h  ecdsa.c  ecdsa.h  elf.h  elf_inlines.h  exFAT.c  exFAT.h  extern.h  frontend.c  frontend.h  fw.c  fw.h  fw_unk.c  fw_unk.h  getopt.c  gim.cpp  gim.h  gim2png.c  gim2png.cpp  gim2png.h  gtf.cpp  (+91 more)
OffsetFinder/: Makefile  main.c
TranslateMGZ/: GetLanguages.py  Makefile  languages.json  main.c  translate.py
payloads/: FIRMWARES
source/: main.c
(+3314 files in other folders)
