# Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(libtga, 1.0.1)
AC_REVISION($Revision: 1.14 $)dnl

AM_CONFIG_HEADER(src/tgaconfig.h)
AC_PROG_MAKE_SET

LIBTGA_DEBUG

CFLAGS_=" $CFLAGS"
AC_PROG_CC

if test "$GCC" = yes; then
    if test "$ac_cv_enable_debug" != "no"; then
        CFLAGS="-g -O2 $CFLAGS_"
    else
      CFLAGS="-O2 $CFLAGS_"
    fi
fi

AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_LIBTOOL

AC_HEADER_STDC
AC_TYPE_SIZE_T

AC_CHECK_SIZEOF(unsigned int)
AC_C_CONST


AC_CONFIG_FILES([
Makefile
src/Makefile
examples/Makefile
doc/Makefile 
])

AC_OUTPUT
